# zabbix-gadget

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: publish.yml
.github/workflows/scripts/: build-linux.sh  check-version.cjs
config/: zabbix.toml.example
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: allow-app-commands.toml
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  zabbix.rs
src-tauri/src/commands/: config.rs  mod.rs  updater.rs  window.rs  zabbix.rs
src/components/: AboutPanel.tsx  ConnectionEditPanel.tsx  Header.tsx  PanelHeader.tsx  SettingsPanel.tsx  SettingsServerItem.tsx  TooltipPanel.tsx  TriggerCell.tsx  TriggerRow.tsx  TriggerTable.tsx  UpdatePanel.tsx
src/hooks/: useAppUpdate.ts  useConfig.ts  useTauriWindow.ts  useWindowAutoResize.ts  useZabbix.ts
src/lib/: zabbix-api.ts
src/types/: config.ts  zabbix.ts
