[package]
name = "zabbix-gadget"
version = "0.1.3"
description = "Zabbix Desktop Gadget"
authors = [
    "Yoshihiro OKUMURA <orrisroot@gmail.com>"
]
license = "MIT"
repository = "https://github.com/orrisroot/zabbix-gadget"
edition = "2021"

[lib]
name = "zabbix_gadget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "zabbix-gadget"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
toml = "1"
dirs = "6"
env_logger = "0.11"
log = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
